<resources>
    <string name="app_name">MyNotes</string>
    <string name="blank_space"> </string>
    <string name="lbl_settings">Settings</string>
    <string name="channel_name" />
    <string name="channel_description" />
    <string name="super_secret_menu">Super Secret Menu!!</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="which_colour_would_you_like">Which colour would you like?</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="open_toast_test">Open Toast Test</string>
    <string name="create_new_note">Create New Note</string>
    <string name="enter_note_description">Enter Note Description</string>
    <string name="load_existing">Load Existing</string>
    <string name="enter_note_title">Enter Note Title</string>
    <item name="colorPrimaryVariant" type="color">@color/purple_700</item>
    <item name="colorOnPrimary" type="color">@color/white</item>
    <!-- Secondary brand color. -->
    <item name="colorSecondary" type="color">@color/teal_200</item>
    <item name="colorSecondaryVariant" type="color">@color/teal_700</item>
    <item name="colorOnSecondary" type="color">@color/black</item>
    <string-array name="navigation_drawer_items_array">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
    </string-array>
</resources>